// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render a default component 1`] = `
<div
  aria-checked={false}
  aria-label="default"
  className="switch is-enabled"
  data-terra-switch-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="switch"
  tabIndex="0"
>
  <div
    aria-hidden={true}
    className="label-container"
  >
    <div
      className="label-text"
    >
      default
    </div>
    <div
      className="status-label-text"
    >
      <MemoizedFormattedMessage
        id="Terra.switch.switchstatuslabel.off"
      />
    </div>
  </div>
  <div
    aria-hidden={true}
    className="tray"
  >
    <div
      className="slider"
    />
  </div>
</div>
`;

exports[`Switch should render as disabled when set 1`] = `
<div
  aria-checked={false}
  aria-disabled={true}
  aria-label="Label"
  className="switch is-disabled"
  data-terra-switch-show-focus-styles={true}
  role="switch"
>
  <div
    aria-hidden={true}
    className="label-container"
  >
    <div
      className="label-text"
    >
      Label
    </div>
    <div
      className="status-label-text"
    >
      <MemoizedFormattedMessage
        id="Terra.switch.switchstatuslabel.off"
      />
    </div>
  </div>
  <div
    aria-hidden={true}
    className="tray"
  >
    <div
      className="slider"
    />
  </div>
</div>
`;

exports[`Switch should render block switch element when isBlock is specified 1`] = `
<div
  aria-checked={false}
  aria-label="default"
  className="switch is-enabled is-block"
  data-terra-switch-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="switch"
  tabIndex="0"
>
  <div
    aria-hidden={true}
    className="label-container is-block"
  >
    <div
      className="label-text"
    >
      default
    </div>
    <div
      className="status-label-text"
    >
      <MemoizedFormattedMessage
        id="Terra.switch.switchstatuslabel.off"
      />
    </div>
  </div>
  <div
    aria-hidden={true}
    className="tray"
  >
    <div
      className="slider"
    />
  </div>
</div>
`;
